<resources>
    <string name="app_name">CryptoCurrencyApp</string>
    <string name="home">Дом</string>
    <string name="market">Рынок</string>
    <string name="watchlist">Наблюдаемое</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="not_found">Не найдено никаких данных</string>
    <string name="search_hint">Найти криптовалюту</string>
    <string name="empty_watchlist">Ваш лист пуст</string>
    <string name="_1m">1 м.</string>
    <string name="_1w">1 н.</string>
    <string name="_1d">1 д.</string>
    <string name="_4h">4 ч.</string>
    <string name="_1h">1 ч.</string>
    <string name="_15m">15 мин.</string>
    <string name="percent_change_30d">Изменения за 30д.</string>
    <string name="percent_change_7d">Изменения за 7д.</string>
    <string name="total_supply">Нынешнее количество</string>
    <string name="dominance">Доминация</string>
    <string name="Volume_24h">Объем за 24ч.</string>
    <string name="market_cap">Капитализация</string>
    <string name="name">Имя</string>
    <string name="try_again">Попробуйте снова!</string>
</resources>