<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/homeFragment"
        android:enabled="true"
        android:icon="@drawable/ic_home"
        android:title="@string/home"
        app:showAsAction="always"
        app:iconTint="@color/yellow"/>
    <item android:id="@+id/marketFragment"
        android:enabled="true"
        android:icon="@drawable/ic_market"
        android:title="@string/market"
        app:showAsAction="ifRoom"
        app:iconTint="@color/yellow"/>
    <item android:id="@+id/watchlistFragment"
        android:enabled="true"
        android:icon="@drawable/ic_favorites"
        android:title="@string/watchlist"
        app:showAsAction="always"
        app:iconTint="@color/yellow"/>

</menu>